--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,8 +13,7 @@ jobs:
             - name: Setup go
               uses: actions/setup-go@v5
               with:
-                  go-version: "1.21"
-                  cache: false
+                  go-version: "stable"
             - name: Build
               run: "go build ./..."
             - name: Test
@@ -28,24 +27,8 @@ jobs:
             - name: Setup go
               uses: actions/setup-go@v5
               with:
-                  go-version: "1.21"
-                  cache: false
+                  go-version: "stable"
             - name: Lint
               uses: golangci/golangci-lint-action@v6
               with:
-                  version: v1.55.1
-                  args: --config=.golangci.yaml
-    codeqL-build:
-        name: CodeQL build
-        runs-on: ubuntu-latest
-        permissions:
-            security-events: write
-        steps:
-          - name: Checkout repository
-            uses: actions/checkout@v4
-          - name: Initialize CodeQL
-            uses: github/codeql-action/init@v3
-          - name: Autobuild
-            uses: github/codeql-action/autobuild@v3
-          - name: Perform CodeQL Analysis
-            uses: github/codeql-action/analyze@v3
+                  version: latest
